fix: remove unneeded overflow control for unremoved-classname in globals.css

--- a/src/app/(page)/globals.css
+++ b/src/app/(page)/globals.css
@@ -6,7 +6,6 @@
   font-family: Arial, Helvetica, sans-serif;
 } */
 
-body.unremoved-classname,
 body.unremoved-classname[data-scroll-locked] {
   overflow: clip !important;
 }
